another try to fix the viewport on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -23,16 +23,17 @@
   src: url("Roboto-Regular.ttf");
 }
 
-body,
-body * {
+* {
   margin: 0;
   padding: 0;
   font-family: "RobotoRegular";
 }
 
 body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  min-height: 100%;
+  min-height: -moz-available; /* WebKit-based browsers will ignore this. */
+  min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  min-height: fill-available;
 }
 
 a,
